--- a/cv.html
+++ b/cv.html
@@ -1,11 +1,18 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Cvfidele</title>
+  <title>seance2</title>
 </head>
-</div>
+<body>
+  <div>
+<p><strong>HELLO!</strong></p>
+  </div>
 
-<div>
+      <div>
 
-</div>
-<div>
+      </div>
+
+      <div>
+      </div>
+    </body>
+    </html>
